task HIESP-849: Fixed Tables for dark mode

--- a/variables/navs.less
+++ b/variables/navs.less
@@ -16,7 +16,7 @@
 @nav-link-border-color:                         #888888;
 
 //** Header navs
-@nav-header-item-border-left:                   #eeeeee;
+@nav-header-item-border-left:                   #444444;
 
 //** Tabs
 
