--- a/variables/tables.less
+++ b/variables/tables.less
@@ -52,8 +52,8 @@
 @table-drag-column-helper-border-color:     @gray;
 
 //** Fixed table.
-@table-sb-fixed-col-border-right-color:     @gray;
-@table-sb-vh-fixed-col-border-right-color:  #bbbbbb;
+@table-sb-fixed-col-border-right-color:     #666666;
+@table-sb-vh-fixed-col-border-right-color:  #666666;
 @table-sb-vh-fixed-col-scrollbar-rail-border-top-color: #dddddd;
 @table-sb-vh-col-border-right-color:        #dddddd;
 
